Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -411,7 +411,7 @@ To obtain values of interest from the raw measurements, we carried out lots of m
 
 Although we were not able to carry out this laboratory session due to the unfortunate circumstances, the analysis part of this report dealt with the empirical verification of several theoretical predictions on turbulent boundary layers and universal turbulent behaviours and gave an insight on the work required to understand, model and predict turbulent phenomena. \\
 
-Today's mechanics see new methods using data approachs
+If some people believe that numerical simulations can be a substitute to empirical developpemnts, it has since demonstrates that this is far from being a reality. In fact, experimental data even regain popularity as today's research in mechanics see new methods taking advantage of great amount of data and capable of constructing reduced models. An introduction of turbulence and big data can be found at \cite{pollardWhitherTurbulenceBig} and an example of a new method (that appears barely 1-2 years ago) called physics informed neural networks (PINN) applyied to PDF modeling \cite{raissi...} and
 
 The entire code will be available on the Github :
 \begin{center}
