--- a/references.bib
+++ b/references.bib
@@ -5,13 +5,6 @@
 	file = {Full Text:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\CC5MB2PI\\Pollard et al. - Whither Turbulence and Big Data in the 21st Centur.pdf:application/pdf}
 }
 
-@misc{DeepLearningTurbulent,
-	title = {Deep learning of turbulent scalar mixing},
-	url = {https://journals.aps.org/prfluids/abstract/10.1103/PhysRevFluids.4.124501},
-	urldate = {2019-12-09},
-	file = {Phys. Rev. Fluids 4, 124501 (2019) - Deep learning of turbulent scalar mixing:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\3EIAF9C6\\PhysRevFluids.4.html:text/html;Phys.pdf:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\Phys.pdf:application/pdf}
-}
-
 @article{mehtaDiscoveringUniversalVariableorder2019,
 	title = {Discovering a universal variable-order fractional model for turbulent {Couette} flow using a physics-informed neural network},
 	volume = {22},
@@ -235,4 +228,20 @@
 	month = nov,
 	year = {1995},
 	pages = {651--658}
+}
+
+@article{raissiDeepLearningTurbulent2019,
+	title = {Deep learning of turbulent scalar mixing},
+	volume = {4},
+	url = {https://link.aps.org/doi/10.1103/PhysRevFluids.4.124501},
+	doi = {10.1103/PhysRevFluids.4.124501},
+	abstract = {Based on recent developments in physics-informed deep learning and deep hidden physics models, we put forth a framework for discovering turbulence models from scattered and potentially noisy spatiotemporal measurements of the probability density function (PDF). The models are for the conditional expected diffusion and the conditional expected dissipation of a Fickian scalar described by its transported single-point PDF equation. The discovered models are appraised against an exact solution derived by the amplitude mapping closure (AMC)–Johnson-Edgeworth translation (JET) model of binary scalar mixing in homogeneous turbulence.},
+	number = {12},
+	urldate = {2020-04-23},
+	journal = {Phys. Rev. Fluids},
+	author = {Raissi, Maziar and Babaee, Hessam and Givi, Peyman},
+	month = dec,
+	year = {2019},
+	pages = {124501},
+	file = {APS Snapshot:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\storage\\AFC5BAP4\\PhysRevFluids.4.html:text/html;Raissi et al_2019_Deep learning of turbulent scalar mixing.pdf:C\:\\Users\\Gaétan\\Zotero\\Dropbox\\Raissi et al_2019_Deep learning of turbulent scalar mixing.pdf:application/pdf}
 }
