--- a/main.tex
+++ b/main.tex
@@ -134,7 +134,7 @@ We will consider random variables that are speeds values here, mainly $\tilde{u}
 
 We will also deal with $n$\up{th} order central  moment of the distribution defined as $\overline{u^n}$ which will allow us to find $u_{rms}$ ($n=2$), Skewness ($n=3$) or Kurtosis ($n=4$) with appropriate dimensionnalisation. \\
 
-Further more we will introduce spectral analysis with tme and spatial Fourier transform. We will then be able to extract the contribution of a phenomena, for instance kinetic energy of turbulence (TKE), from different scales, frequencies $f$ or wave numbers $\kappa$. For spatial transformation, one of the major prediction is to be found with Kolmogorov similarity hypothesis that state that these spectrum quantities at high Reynolds number only depend of fluid viscosity $\nu$ and dissipation rate of TKE $\varepsilon$ and are universal. And in the inertial sublayer, as viscosity effects are neglictable, these spectra should only depend on $\varepsilon$ (and $\kappa$). As no dimensionless quantity can be made out of $\varepsilon$ and $\kappa$, there must be a power law relation that can be determined with dimansional analysis.
+Furthermore we will introduce spectral analysis with time and spatial Fourier transform. We will then be able to extract the contribution of a phenomena, for instance kinetic energy of turbulence (TKE), from different scales, frequencies $f$ or wave numbers $\kappa$. For spatial transformation, one of the major prediction is to be found with Kolmogorov similarity hypothesis that state that these spectrum quantities at high Reynolds number only depend of fluid viscosity $\nu$ and dissipation rate of TKE $\varepsilon$ and are universal. And in the inertial sublayer, as viscosity effects are neglictable, these spectra should only depend on $\varepsilon$ (and $\kappa$). As no dimensionless quantity can be made out of $\varepsilon$ and $\kappa$, there must be a power law relation that can be determined with dimensional analysis.
 
 
 
@@ -172,7 +172,7 @@ As a classical ohmic resistor, resistance of the wire changes with its temperatu
     \label{fig:AnemometerFitting}
 \end{figure}
 
-This calibration is achieved with the calibration which results are presented on figure \ref{fig:AnemometerFitting} and obtained with \verb|Python|'s file \verb|CalibrationAnemometer.py|. It consists of a minimization process in $\mathbb{R}^3$ of parameters $A,B$ and $n$. For a set of data $y \in \mathbb{R}^p$, we minimize the following quantity : \\ 
+Calibration's results are presented on figure \ref{fig:AnemometerFitting} and obtained with \verb|Python|'s file \verb|CalibrationAnemometer.py|. It consists of a minimization process in $\mathbb{R}^3$ of parameters $A,B$ and $n$. For a set of data $y \in \mathbb{R}^p$, we minimize the following quantity : \\ 
 
 \begin{equation}
     \min_{(A,B,n)\in\mathbb{R}^3} \frac{\sqrt{\frac{1}{p} \sum_{y} \left( E^2(y) - A - BU^n(y) \right)^2 }}{\sqrt{ \frac{1}{p} \sum \left( E^2\right)^2}}
@@ -266,10 +266,10 @@ As depicted on Fig. \ref{fig:F11_filtering_and_comparison}.a, the obtention of $
  from one-dimensional spectrum $F_{11}$ in isotropic case with the relation :
  
  \begin{equation}
-     E(k) = k^3 \frac{d}{dk} \left[ \frac{1}{k} \frac{dF_{11}(k)}{dk} \right]
+     E(\kappa) = \kappa^3 \frac{d}{d\kappa} \left[ \frac{1}{\kappa} \frac{dF_{11}(\kappa)}{d\kappa} \right]
  \end{equation}
  
- But derivation with respect to $k$ amplifies the noise in the spectrum which is distorted by the $1/k$ factor while derivating the second time. A filtering process is therefore required. The first is proceed on $F_{11}(k)$ on a linear scale both for x-axis $k$ and y-axis $F_{11}$. A 5\up{th}-order low pass numerical butterworth filter is used with a hand-tuned frequency cut. Then derivation is proceeded two times with a first order schema $dy/dx \approx (y(x_{k+1})-y(x_k))/(x_{k+1}-x_k)$. $E$ is finally filtered too with a similar filter but with changes in low-pass frequency.\\
+ But derivation with respect to $\kappa$ amplifies the noise in the spectrum which is distorted by the $1/\kappa$ factor while derivating the second time. A filtering process is therefore required. The first is proceed on $F_{11}(\kappa)$ on a linear scale both for x-axis $\kappa$ and y-axis $F_{11}$. A 5\up{th}-order low pass numerical butterworth filter is used with a hand-tuned frequency cut. Then derivation is proceeded two times with a first order schema $dy/dx \approx (y(x_{k+1})-y(x_k))/(x_{k+1}-x_k)$. $E$ is finally filtered too with a similar filter but with changes in low-pass frequency.\\
  
  
  
@@ -287,7 +287,7 @@ As depicted on Fig. \ref{fig:F11_filtering_and_comparison}.a, the obtention of $
 From a qualitative point of you, the agreement with the log-law in the inertial sublayer is very good and validated by the normalized error at a low level :\\
 
 \begin{equation}
-    \varepsilon_{RMS} = \sqrt{\frac{<\left( \bar{U} - u_{\textnormal{log-law}} \right)^2>}{<>\bar{U}^2}} = \num{4.77e-3}
+    \varepsilon_{RMS} = \sqrt{\frac{<\left( \bar{U} - u_{\textnormal{log-law}} \right)^2>}{<\bar{U}^2}>} = \num{4.77e-3}
 \end{equation}
 with 
 \begin{equation}
@@ -330,7 +330,7 @@ If we recall that $u_*$ is defined as $u_* = \sqrt{\tau_w/\rho}$, determining th
     \begin{equation}
         u_* = \sqrt{\alpha \nu}
     \end{equation}
-    \item Fitting the log-law in the inertial sublayer in dimensional form, i.e. finding $(A,B) \in \mathbb{R}^2$ such as $\overline{U} = A \ln y + B$ (m/s). Then using equation \ref{eq:inertialsublayer1} given in $\eta$, we have the equality of slope :
+    \item Fitting the log-law in the inertial sublayer in dimensional form, i.e. finding $(A,B) \in \mathbb{R}^2$ such as $\overline{U} = A \ln y + B$ (m/s). Then using equation \ref{eq:inertialsublayer1} given in $\eta$, we have the equality of logarithmic slope :
     \begin{equation}
         u_* = A\kappa
     \end{equation}
@@ -346,15 +346,15 @@ Previously we have chosen the second possibility because it seems to be the most
 
 \subsection{Comments on Skewness and RMS speed profile}
 
-The RMS speed profile plotted at figure \ref{fig:RMS_Profile} displays a maximum around $y = 0.25$ \si{mm}. This result could be expected from the following qualitative reasoning : near the wall, the no-slip condition implies that $\tilde{u} = 0$ so $u_{RMS} = 0$ too. As $u_{RMS} > 0$ and turbulence does it work, $u_{RMS}$ increases with $y$. But as it gets closer to the centre line, large scale gradients $S_{ij}$ get smaller and so does the production of turbulence's kinetic energy which explain why $u_{RMS}$ decreases when $\eta \rightarrow 1$.\\
+The RMS speed profile plotted at figure \ref{fig:RMS_Profile} displays a maximum around $y = 0.25$ \si{mm}. This result could be expected from the following qualitative reasoning : near the wall, the no-slip condition implies that $\tilde{u} = 0$ so $u_{RMS} = 0$ too. As $u_{RMS} > 0$ and turbulence does its work, $u_{RMS}$ increases with $y$. But as it gets closer to the centre line, large scale gradients $S_{ij}$ get smaller and so does the production of turbulence's kinetic energy which explain why $u_{RMS}$ decreases when $\eta \rightarrow 1$.\\
 
 Skewness profile depicts a more complicated behaviour at figure \ref{fig:Skewness_Profile} but there is a few things to comment though. As Skewness is a measurement of the distorsion of speed values variation, a zero skewness value implies a symmetric PDF and it seems to occur at $y = 0.25$ \si{mm}, which appears to be the location of the maximum of $u_{RMS}$. The global shape of $S_u$ is coherent with what can be found into literature as \cite{mathisRelationshipVelocitySkewness2011} for instance. If we look at the three curves depicted at figure \ref{fig:PDF}.b, blue solid line (representing the PDF at $y=0.2$ \si{mm}) depicts a density function that has a loss of balance on the right : values on the right side of the average are located farther than those on left side and so $S_u$ is positive. On the contrary, the green solid line (representing the PDF at $y=20$ \si{mm}) lacks of balance on the left where $S_u$ is negative.\\
 
 \subsection{Comments on density functions}
 
-According to figure \ref{fig:PDF}.a where the custom PDF function is compared to normalized histogram function from \verb|Numpy|'s library, our method and the chosen filtering seems to be valid. Moreover for the three PDF depicted at figure \ref{fig:PDF}.a, the integral minus 1 is kept under $1/N_{reg}$ where $N_{reg}$ is the length of the regular range of $u$ values on which is interpolated the CDF. From a practical point of view, the gap of PDF integral to unit is negligible for $N_{reg} \gtrsim 10^3$ an consolidate the presented approach.\\
+According to figure \ref{fig:PDF}.a where the custom PDF function is compared to normalized histogram function from \verb|Numpy|'s library, our method and the chosen filtering seems to be valid. Moreover for the three PDF depicted at figure \ref{fig:PDF}.b, the integral minus 1 is kept under $1/N_{reg}$ where $N_{reg}$ is the length of the regular range of $u$ values on which is interpolated the CDF. From a practical point of view, the gap of PDF integral to unit is negligible for $N_{reg} \gtrsim 10^3$ an consolidate the presented approach.\\
 
-One way of normaize the PDF axis to plot all the curves is to apply an affine transform on $u$-axis so that the new data are mean free and of standard deviation equal to 1. This can be summarized as :
+One way of normalize the PDF axis to plot all the curves is to apply an affine transform on $u$-axis so that the new data are mean free and of standard deviation equal to 1. This can be summarized as :
 \begin{align}
     x &\rightarrow \hat{x} = \frac{x - \overline{x}}{\sqrt{\overline{x^2}}} \\
     PDF_x & \rightarrow PDF_{\hat{x}} = \sqrt{\overline{x^2}} PDF_x
@@ -362,7 +362,7 @@ One way of normaize the PDF axis to plot all the curves is to apply an affine tr
 
 As demonstrated in the final exam, the PDF has to be multiplied by standard deviation (which is here equal to $u_{rms}$) so that $\int PDF_x(x) dx = \int PDF_{\hat{x}}(\hat{x}) d\hat{x} = 1$. From PDF we can get the CDF back by a basic integration as it is shown at figure \ref{fig:CDF_cl}.\\
 
-At table \ref{tab:DistribValuePDF} we compare distribution values obtained directly from the analysis program and those computed using data at centreline. We can notice that for the average and the root-mean-square mean-free velocity, the relative error to the analysis program is negligible. Nonetheless there is a quite noticeable difference for the skewness. Although the sign and the order of magnitude is good, having 15 percent of difference while $u_{rms}$ is below $0.1$ \% is a bit unexpected. We can try to explain this error by the fact that the extreme values taken by $u$ are "cut" while computing the PDF since there are values of $u$ that happen to be outside boundaries of the PDF $x$-axis that are mixed together with the boundary values. Moreover the 3\up{rd} power tends to increases the differences in comparison tu the square root of $u_{rms}$ that packed the distance. On the contrary, after having a look inside the \verb|Fortran| code source, the programm seems to compute the third central moment on the move, without interpolating data on a regular range.\\
+At table \ref{tab:DistribValuePDF} we compare distribution values obtained directly from the analysis program and those computed using data at centreline. We can notice that for the average and the root-mean-square mean-free velocity, the relative error to the analysis program is negligible. Nonetheless there is a quite noticeable difference for the skewness. Although the sign and the order of magnitude is good, having 15 percent of difference while $u_{rms}$ is below $0.1$ \% is a bit unexpected. We can try to explain this error by the fact that the extreme values taken by $u$ are "cut" while computing the PDF since there are values of $u$ that happen to be outside boundaries of the PDF $x$-axis that are mixed together with the boundary values. Moreover the 3\up{rd} power tends to increase the differences in comparison to the square root of $u_{rms}$ that packed the distance. On the contrary, after having a look inside the \verb|Fortran| code source, the programm seems to compute the third central moment on the move, without interpolating data on a regular range.\\
 
 
 \begin{table}[H]
@@ -397,7 +397,7 @@ The matching of curves from different locations at figure \ref{fig:F11_filtering
 
 We propose a brief overview of error analysis in this section. For further analysis one can have a look at \cite{derksenCalibrationErrorMeasurement1995}. Since our results come from measurements that are processed sometimes quite a lot, it can be interesting to keep in mind the different sources of errors. We can separate them in three groups : the errors that are inherent of the studied phenomena, the ones that comes from the data acquisition and finally the propagation of this error through data processing.\\
 
-Measurement of statistical values of a flow deals directly with the random characteristic of turbulence. Turbulent fluctuations of velocity and pressure are characterized by the width of the probability density function. The RMS value of velocity is therefore a good clue to represent the level of randomness. But there are other random process than turbulence like noise in the flow (at lower scales than Kolmogorov's micro scale) as well as in resistances and electronic devices (temperature fluctuations described by statistical physics theory). The difficulty that brings this kind of noise is to be found in the width of its spectrum which can make it difficult to delete. Moreover as we look at amplified tiny variations of the hot-wire resistance, one should verify that the ratio of noise versus resistance fluctuations due to turbulent intermittency stays at reasonable values. We also discussed previously about the fact that hot-wire anemometry requires the assumption of a negligible heat capacity so that the change of wire temperature is faster that the change of ambient turbulent velocity. Finally we have to take into account the duration of measurement which will be critical in the averaging process.\\
+Measurement of statistical values of a flow deals directly with the random characteristic of turbulence. Turbulent fluctuations of velocity and pressure are characterized by the width of the probability density function. The RMS value of velocity is therefore a good clue to represent the level of randomness. But there are other random process than turbulence like noise in the flow (at lower scales than Kolmogorov's micro scale) as well as in resistances and electronic devices (temperature fluctuations described by statistical physics theory). The difficulty that brings this kind of noise is to be found in the width of its spectrum which can make it difficult to delete. Moreover as we look at amplified tiny variations of the hot-wire resistance, one should verify that the ratio of noise versus resistance fluctuations due to turbulent intermittency stays under reasonably low values. We also discussed previously about the fact that hot-wire anemometry requires the assumption of a negligible heat capacity so that the change of wire temperature is faster that the change of ambient turbulent velocity. Finally we have to take into account the duration of measurement which will be critical in the averaging process.\\
 
 The measurement procedure involves several large scale uncertainties. First the King's Law constants are calibrated with a specific precision and we could characterized the precision of this fitting with the residual error in the optimisation process discussed earlier. Moreover this whole calibration is given for a reference room's temperature that might change during the experiment. Otherwise, not only the measurement itself is crucial but also the position $y$ at which it is carried out reveals an uncertainty that can affect the log-law fitting for instance. This uncertainty depends on the tool used to position it at the desired distance from the wall. As we go to a distance $\sim 0.13$ \si{mm}, we may think that the uncertainty is around $\sim 0.01$ \si{mm}. But the experimenter attention is the most critical part here. Finally the conversion from an analog signal to a discretized, sampled and rounded digital one results in a loss of information.\\
 
@@ -411,7 +411,7 @@ To obtain values of interest from the raw measurements, we carried out lots of m
 
 Although we were not able to carry out this laboratory session due to the unfortunate circumstances, the analysis part of this report dealt with the empirical verification of several theoretical predictions on turbulent boundary layers and universal turbulent behaviours and gave an insight on the work required to understand, model and predict turbulent phenomena. \\
 
-If some people believe that numerical simulations can be a substitute to empirical developpemnts, it has since demonstrates that this is far from being a reality. In fact, experimental data even regain popularity as today's research in mechanics see new methods taking advantage of great amount of data and capable of constructing reduced models. An introduction of turbulence and big data can be found at \cite{pollardWhitherTurbulenceBig} and an example of a new method (that appears barely 1-2 years ago) called physics informed neural networks (PINN) applyied to PDF modeling \cite{raissi...} and turbulent Couette flow \cite{mehtaDiscoveringUniversalVariableorder2019}
+If some people believed that numerical simulations could be a substitute to empirical developpemnts, it has since been demonstrated that this is far from being a reality. In fact, experimental data even regain popularity as today's research in mechanics see new methods taking advantage of great amounts of data and capable of builiding reduced models. An introduction of turbulence and big data can be found at \cite{pollardWhitherTurbulenceBig} and an example of a new method (that appeared barely 1-2 years ago) called physics informed neural networks (PINN) applied to PDF modelling \cite{raissiDeepLearningTurbulent2019} and turbulent Couette flow \cite{mehtaDiscoveringUniversalVariableorder2019} could bring promising outlooks.\\
 
 The entire code will be available on the Github :
 \begin{center}
