Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -262,7 +262,7 @@ Relative position in sorted data $k/\textnormal{length}(u_{sorted})$ is appended
     \label{fig:F11_filtering_and_comparison}
 \end{figure}
 
-As depicted on Fig. \ref{fig:F11_filtering_and_comparison}.a, the obtention of $E$ is not trivial. Theoreticcaly, according to \cite{popeTurbulentFlows2000a} (eq. 6.217) and \cite{tennekesFirstCourseTurbulence1972} (eq. 8.1.13) one should obtain $E$
+As depicted on Fig. \ref{fig:F11_filtering_and_comparison}.a, the obtaining of $E$ is not trivial. Theoretically, according to \cite{popeTurbulentFlows2000a} (eq. 6.217) and \cite{tennekesFirstCourseTurbulence1972} (eq. 8.1.13) one should obtain $E$
  from one-dimensional spectrum $F_{11}$ in isotropic case with the relation :
  
  \begin{equation}
